--- a/assignment2.css
+++ b/assignment2.css
@@ -1,8 +1,10 @@
-
+body {
+    background-color:antiquewhite;
+}
 
 #main-nav {
     background-color: black;
-    color:aquamarine;
+    color:beige;
     width:98%;
     padding:10px;
 }
@@ -14,7 +16,7 @@
 
 #main-nav li a:hover{
     color: black;
-    background-color:aquamarine;
+    background-color:beige;
 }
 
 #main-nav ul{
@@ -25,7 +27,7 @@
 }
 
 #main-nav li a{
-    color:aquamarine;
+    color:beige;
     padding:10px;
     text-decoration: none;
 }
@@ -81,8 +83,8 @@
   
   .quote-container {
     text-align: center;
-    background-color:darkslategray;
-    color:aquamarine;
+    background-color:black;
+    color:beige;
     border:2px solid black;
     float:center;
     width:70%;
@@ -90,10 +92,129 @@
   }
 
   .audio-instructions {
-    background-color:darkslategray;
-    color:aquamarine;
+    background-color:black;
+    color:beige;
     border:2px solid black;
     float:center;
     width:60%;
     margin:auto;
+    padding:5px;
   }
+
+  #table, th, td, tr, img {
+    border: 1px solid;
+    padding: 4px;
+    background-color: white;
+  }
+
+.button-50 {
+  appearance: button;
+  background-color: #000;
+  background-image: none;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 12px 40px;
+  text-align: center;
+  text-transform: none;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.button-50:focus {
+  text-decoration: none;
+}
+
+.button-50:hover {
+  text-decoration: none;
+}
+
+.button-50:active {
+  box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+  outline: 0;
+}
+
+.button-50:not([disabled]):active {
+  box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .button-50 {
+    padding: 12px 50px;
+  }
+}
+
+#imageSlider {
+    margin-bottom:5px;
+    margin-left: 400px;
+    text-align: center;
+}
+
+#dogButtons {
+    text-align: center;
+}
+
+/* CSS */
+.button-23 {
+  background-color: #FFFFFF;
+  border: 1px solid #222222;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #222222;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  padding: 13px 23px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  touch-action: manipulation;
+  transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+  user-select: none;
+  -webkit-user-select: none;
+  width: auto;
+}
+
+.button-23:focus-visible {
+  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+  transition: box-shadow .2s;
+}
+
+.button-23:active {
+  background-color: #F7F7F7;
+  border-color: #000000;
+  transform: scale(.96);
+}
+
+.button-23:disabled {
+  border-color: #DDDDDD;
+  color: #DDDDDD;
+  cursor: not-allowed;
+  opacity: 1;
+}
+
+#dogInfo {
+    border:3px solid;
+    border-color: black;
+    border-radius: 1px;
+    background-color: beige;
+}
